--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               alt="web"
             />
           </div>
-          <hr class="about__advantages__image-hr hr-left" />
+          <hr class="about__advantages__image-hr hr-left" aria-hidden="true"/>
           <div class="about__advantages__image-item i-a-img">
             <img
               class="about__advantages__image"
@@ -182,7 +182,7 @@
               alt="ios & android"
             />
           </div>
-          <hr class="about__advantages__image-hr hr-right" />
+          <hr class="about__advantages__image-hr hr-right" aria-hidden="true"/>
           <div class="about__advantages__image-item marketing-img">
             <img
               class="about__advantages__image"
